--- a/Home.html
+++ b/Home.html
@@ -17,16 +17,16 @@
     <div class="image_member">
         <img src="avatar1.jpg" alt="Member" style="display:inline-block ;width: 480px; height: 640px;" usemap=#Member1 >
         <map name="Member1">
-            <area shape="circle" coords="230,220,180" href="../index/Member1.html">
+            <area shape="circle" coords="230,220,180" href="../Member1.html">
         </map>
        
         <img src="avatar2.jpg" alt="Member1" style="display:inline-block ;width: 480px; height: 640px;" usemap=#Member2>
         <map name="Member2">
-            <area shape="circle" coords="230,220,180" href="../index/Member2.html">
+            <area shape="circle" coords="230,220,180" href="../Member2.html">
         </map>
         <img src="avatar3.jpg" alt="Member1" style="display:inline-block ;width: 480px; height: 640px;" usemap=#Member3>
         <map name="Member3">
-            <area shape="circle" coords="230,220,180" href="../index/Member3.html">
+            <area shape="circle" coords="230,220,180" href="../Member3.html">
     </div>
 </body>
 </html>
